# SimpleRlp

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yaml
docs/: AdvRlpOverview.drawio  AdvancedRlpSpecs.md
include/: CMakeLists.txt
include/AdvancedRlp/: AdvancedRlp.hpp  CatArray.hpp  CatBoolean.hpp  CatBytes.hpp  CatDict.hpp  CatId.hpp  CatInteger.hpp  CatNull.hpp  CatStaticDict.hpp  CatString.hpp  Exceptions.hpp  GenericTransform.hpp  GenericWriter.hpp  ParserUtils.hpp  WriterUtils.hpp
include/AdvancedRlp/Internal/: SimpleRlp.hpp  SimpleUtf.hpp
include/SimpleRlp/: BytesParser.hpp  CMakeLists.txt  Common.hpp  DefaultTypes.hpp  EthHeader.hpp  Exceptions.hpp  FailingParser.hpp  GeneralParser.hpp  InputStateMachine.hpp  ListParser.hpp  ParserBase.hpp  RlpDecoding.hpp  RlpEncoding.hpp  SimpleRlp.hpp  StaticDictParser.hpp  Writer.hpp
include/SimpleRlp/Internal/: SimpleObjects.hpp
test/: CMakeLists.txt  GetEthHeader.py
test/src/: Main.cpp  TestAdvRlpCatArray.cpp  TestAdvRlpCatBoolean.cpp  TestAdvRlpCatBytes.cpp  TestAdvRlpCatDict.cpp  TestAdvRlpCatInteger.cpp  TestAdvRlpCatNull.cpp  TestAdvRlpCatStaticDict.cpp  TestAdvRlpCatString.cpp  TestAdvRlpMisc.cpp  TestRlpBytesParser.cpp  TestRlpEthHeader.cpp  TestRlpFailingParser.cpp  TestRlpInputStateMachine.cpp  TestRlpListParser.cpp  TestRlpWriter.cpp  TestStaticDictParser.cpp
